cadastro e execução de scripts